--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "razorpay": "^2.9.2"
   }
