--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,17 @@
   "author": "Akshay Dhobale",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1",
     "razorpay": "^2.9.2"
   }
 }
