--- a/server/.env.local
+++ b/server/.env.local
@@ -1,11 +1,20 @@
-PORT = 3000
-DB_URL = ""
+PORT = 4000
+DB_URL = 
 CORS_ORIGIN = *
 
-CLOUD_NAME = 
+CLOUD_NAME =
 API_KEY = 
-API_SECRET = 
+API_SECRET =  
+FOLDER_NAME = 
 
+MAIL_HOST = 
+MAIL_USER = 
+MAIL_PASS = 
 
 RAZORPAY_KEY = 
 RAZORPAY_SECRET = 
+
+JWT_SECRET = 
+
+
+
