--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-router": "^6.22.2",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -15,7 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "server": "cd server && npm run dev",
-    "dev":"concurrently -n \"client,server\" -c \"bgBlue,bgGreen\" \"npm start\" \"npm run server\" "
+    "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgGreen\" \"npm start\" \"npm run server\" "
   },
   "eslintConfig": {
     "extends": [
